<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings for general purposes -->

    <string name="app_name">PawHub</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="editUser">Edit User</string>
    <string name="logout">Log out</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="my_pets">My Pets</string>
    
<!--     Strings para SplashScreen Activity -->


    <!-- Strings para Login Activity -->

    <string name="title_activity_login">Login</string>
    <string name="logoDescription">PawHub</string>
    <string name="userEditText">User</string>
    <string name="passwordEditText">Password</string>
    <string name="loginPawhubDescription">Login with Pawhub account</string>
    <string name="loginFbDescription">Login with Facebook account</string>
    <string name="forgotPasswordLink"><u><a href="www.google.com">I forgot my password</a></u></string>
    <string name="accountLink"><a href="www.google.com">New here?</a></string>
    <string name="title_activity_petmatch">Preferences for Match</string>

    <!-- Strings para PetMatch Activity -->

    <string name="textPreferences">Choose the ideal characteristics for matching with you and your pets</string>
    <string name="lovelyText">Lovely</string>
    <string name="cutenessText">Cuteness</string>
    <string name="softnessText">Softness</string>
    <string name="funnyText">Funny</string>
    <string name="sameType">Same Type</string>
    <string name="contentDescriptionPetMatch">Pet to Match</string>
    <string name="btnMatch">Match my Pet</string>
    <string name="title_activity_rate_my_pet">Rate a Pet</string>

    <!-- Strings para RateMyPet Activity -->

    <string name="contentDescriptionImgPet">Pet Image</string>
    <string name="petName"><b>Rocko</b></string>
    <string name="btnRatePet">Rate <b>Rocko</b></string>
    <string name="lblActivityRatePet">Rate My Pet</string>
    <string name="lblActivityMatchSettings">Match Settings</string>
    <string name="lblActivityEditPet">Edit Pet</string>
    <string name="lblPetMatch">PetMatch</string>
    <string name="lblRatePet">RateMyPet</string>
    <string name="lblLogo">Logo</string>
    <string name="lblEditPet">Edit Your Pet</string>
    <string name="lblPetName">Name:</string>
    <string name="lblPetType">Kind:</string>

    <string-array name="editType_array">
        <item>Dog</item>
        <item>Cat</item>
        <item>Fish</item>
        <item>Rabbit</item>
        <item>Rodent</item>
        <item>Amphibian</item>
        <item>Reptile</item>
        <item>Bird</item>
        <item>Horse</item>
        <item>Ferret</item>
        <item>Pig</item>
        <item>Other</item>
    </string-array>

    <string name="lblPetBreed">Breed:</string>

    <string-array name="editBreed_array">
        <item>Breed1</item>
        <item>Breed2</item>
        <item>Breed3</item>
    </string-array>

    <string name="lblGenre1">Male</string>
    <string name="lblGenre2">Female</string>
    <string name="lblPetBirth">Day of Birth:</string>
    <string name="lblPetPicture">Photo:</string>
    <string name="title_activity_edit_user">Edit User</string>
    <string name="lblEditUser">Edit User</string>
    <string name="lblUserName">Username</string>
    <string name="lblName">Name</string>
    <string name="lblLastName">Last Name</string>
    <string name="lblUserBirth">Day of birth</string>
    <string name="lblUserPicture">Photo:</string>
    <string name="lblUserPets">Pets:</string>
    <string name="lblPlus">More</string>
    <string name="lblFinish">Finish</string>
    <string name="title_activity_global_rates">Global Rates</string>
    <string name="title_activity_static_demo">Static Demo</string>
    <string name="title_activity_list_view_example">ListViewExampleActivity</string>

    <!-- Strings para PetMatch Result Activity -->
    <string name="lblMatchPet">Match My Pet!</string>
    <string name="txtRateNumber">4.0</string>
    <string name="btnFollow">Follow</string>
    <string name="btnSayHi">Say Hi!</string>
    <string name="title_activity_petmatch_result">Petmatch Result</string>

    <!-- Strings para Top 20 Category Activity -->
    <string name="title_activity_top20_category">Top 20 Category</string>
    <string name="votes">239 Votes</string>

    <!-- Strings para Fragment Tabs -->
    <string name="tabRateAPet">Rate a pet</string>
    <string name="tabViewMyRates">View my Rates</string>
    <string name="tabGLobalRates">Global Rates</string>
    <string name="title_activity_details_rate">DetailsRate</string>

    <!-- Strings para DetailsRate Activity -->
    <string name="txtNamePet">Rocko</string>
    <string name="txtOwner">Owner Israeliux</string>
    <string name="txtOwnerName">Israeliux</string>
    <string name="subtitleDetailsRate">Top 20 Most Lovely</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

</resources>
