
    
    <RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PetmatchActivity"
    android:background="@drawable/gradient"
     >

	    <TextView
	        android:id="@+id/information"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/textPreferences" />
	    
	    <TableLayout 
	        android:id="@+id/ratingLayout"
	        android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:layout_below="@+id/information"
	        >
	        
	        <TableRow 
	            android:id="@+id/lovelyRow"
	            android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	            >
	            
	            <TextView
					android:id="@+id/lovelyText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/lovelyText"
					android:layout_gravity="center_vertical|center_horizontal"                
	                />
	            
	            <RatingBar 
	                android:id="@+id/lovelyRating"
	                android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
	
	                />
	            
	        </TableRow>
	        
	        <TableRow 
	            android:id="@+id/cutenessRow"
	            android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	            >
	            
	            <TextView
					android:id="@+id/cutenessText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/cutenessText"
					android:layout_gravity="center_vertical|center_horizontal"                
	                />
	            
	            <RatingBar 
	                android:id="@+id/cutenessRating"
	                android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
	                />
	            
	            
	        </TableRow>
	        
	        
	                
	
	        
	                
	        <TableRow 
	            android:id="@+id/softnessRow"
	            android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	            >
	            
	            <TextView
					android:id="@+id/softnessText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/softnessText"
					android:layout_gravity="center_vertical|center_horizontal"           
	                />
	            
	            <RatingBar 
	                android:id="@+id/softnessRating"
	                android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
	                />
	            
	            
	        </TableRow>
	        
	                
	        <TableRow 
	            android:id="@+id/funnyRow"
	            android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	            >
	            
	            <TextView
					android:id="@+id/funnyText"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/funnyText"
					android:layout_gravity="center_vertical|center_horizontal"                
	                />
	            
	            <RatingBar 
	                android:id="@+id/funnyRating"
	                android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="right"
	                />
	            
	            
	        </TableRow>
	        
	    </TableLayout>
	    
	    <LinearLayout 
	        android:id="@+id/sameTypeLayout"
	        android:orientation="horizontal"
	        android:layout_below="@+id/ratingLayout"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:paddingRight="15dp">
	        
	        <CheckBox 
	            android:id="@+id/chkSameType"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            />
	        
	        <TextView 
	            android:id="@+id/lblSameType"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sameType"
	            />
	        
	    </LinearLayout>
	    
	    
	    <ImageView
	        android:id="@+id/imgPetToRate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignLeft="@+id/ratingLayout"
	        android:layout_below="@+id/sameTypeLayout"
	        android:contentDescription="@string/contentDescriptionPetMatch"
	        android:src="@drawable/pettorate" />
	
	    <ImageView
	        android:id="@+id/imgAskPet"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignRight="@+id/sameTypeLayout"
	        android:layout_alignTop="@+id/imgPetToRate"
	        android:contentDescription="@string/contentDescriptionPetMatch"
	        android:src="@drawable/petask" />
	
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:layout_alignLeft="@+id/imgPetToRate"
	        android:layout_alignRight="@+id/imgAskPet"
	        android:layout_below="@+id/imgPetToRate"
	        android:gravity="center_vertical|center_horizontal" >
	    
		    <ImageButton 
		        android:id="@+id/ibtnMatch"
		        android:contentDescription="@string/ibtnMatch"
		        android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:src="@drawable/btnmatchmypet"
		        />
		    
		    
		</LinearLayout>
	</RelativeLayout>