<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    
    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    tools:context=".EditPetActivity"
    android:background="@drawable/gradient"
     >

    <!-- android:background="#B3B1B2"  --> 

    <TextView
        android:id="@+id/lblEditPet"
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:paddingTop="6dp"
        android:paddingLeft="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="#464648"
        android:gravity="left"
        android:lines="5"
        android:text="@string/lblEditPet"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
         />

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblEditPet"
        android:layout_below="@+id/lblEditPet"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        
         <TextView
            android:id="@+id/blPetName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lblPetName"
	        android:layout_marginTop="10dp"
	        android:gravity="center"
            />
         
         <TextView
            android:id="@+id/lblPetType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/lblPetType" />
         
         <TextView
            android:id="@+id/lblPetBreed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp" 
            android:text="@string/lblPetBreed" />
         

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/LinearLayout1"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
         
         <EditText
             android:id="@+id/txtNombre"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="3"
             android:ems="10"
             android:inputType="textPersonName"
             tools:ignore="InefficientWeight" />

        <Spinner
            android:id="@+id/spinEditType"  
            android:layout_width="215dp"
            android:layout_height="wrap_content"            
         />
        
        <Spinner
            android:id="@+id/spinEditBreed" 
            android:layout_width="215dp"
            android:layout_height="wrap_content"
         />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/LinearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/LinearLayout2"
        android:orientation="vertical" >

        <include
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            layout="@layout/compound_button" />
        
    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/LinearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout3"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >
        
          <TextView
            android:id="@+id/blPetBirth"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/lblPetBirth"
	        android:layout_marginTop="20dp"
	        android:gravity="center"
            />
         
         <TextView
            android:id="@+id/lblPetPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="150dp"
            android:text="@string/lblPetPicture" />

    </LinearLayout>
    
     <LinearLayout
        android:id="@+id/LinearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/LinearLayout4"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
         >
         
         <DatePicker
         android:id="@+id/dateBirth"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:calendarViewShown="false"
         android:spinnersShown="true"
         android:startYear="2000"
         
          />
         
         </LinearLayout>
         
     <LinearLayout
        android:id="@+id/LinearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/LinearLayout5"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
         > 
         
          <ImageView
         android:id="@+id/petPicture"
         android:layout_width="125dp"
         android:layout_height="125dp"
         android:contentDescription="@string/lblPetPicture"
         android:src="@drawable/pet_picture" />
         
         </LinearLayout>
         
     <ImageButton
            android:id="@+id/btnRateAPet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/LinearLayout6"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/lblFinish"
            android:onClick="onBtnFinish_Click"
            android:src="@drawable/btnfinish" />


</RelativeLayout> 
    
</ScrollView>

