<ScrollView xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" xmlns:android="http://schemas.android.com/apk/res/android"
  	>

    <RelativeLayout android:id="@+id/RateMyPetLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".RateMyPetActivity" >


        <ImageView
            android:id="@+id/imgPet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/setRatingsLayout"
            android:contentDescription="@string/contentDescriptionImgPet"
            android:scaleType="centerCrop"
            android:src="@drawable/petimage" />

        <TableLayout
            android:id="@+id/setRatingsLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgPet"
            android:layout_marginBottom="20dp"
            android:background="#464648"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TableRow
                android:id="@+id/lovelyRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

                <TextView
                    android:id="@+id/lovelyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lovelyText"
                    android:textColor="#FFFFFF" />

                <RatingBar
                    android:id="@+id/lovelyRating"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="right|center_vertical"
                    android:numStars="5"
                    android:rating="2.0"
                    android:stepSize="1" />
            </TableRow>

            <TableRow
                android:id="@+id/cutenessRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/cutenessText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/cutenessText"
                    android:textColor="#FFFFFF" />

                <RatingBar
                    android:id="@+id/cutenessRating"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="right"
                    android:numStars="5"
                    android:rating="2.0"
                    android:stepSize="1" />
            </TableRow>

            <TableRow
                android:id="@+id/softnessRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/softnessText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/softnessText"
                    android:textColor="#FFFFFF" />

                <RatingBar
                    android:id="@+id/softnessRating"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:numStars="5"
                    android:rating="2.0"
                    android:stepSize="1" />
            </TableRow>

            <TableRow
                android:id="@+id/funnyRow"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/funnyText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/funnyText"
                    android:textColor="#FFFFFF" />

                <RatingBar
                    android:id="@+id/funnyRating"
                    style="@style/CustomRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:numStars="5"
                    android:rating="2.0"
                    android:stepSize="1" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setRatingsLayout"
            android:gravity="center"
            android:weightSum="10" >

            <Button
                android:id="@+id/btnRatePet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:background="@drawable/gradient_purple"
                android:text="@string/btnRatePet"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>