<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailsRate" >

	<ImageView
	    android:id="@+id/imgPetDetails"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/contentDescriptionImgPet"
	    android:src="@drawable/petimage" />
	
	<TableLayout 
	    android:background="#464648"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/imgPetDetails">
	
	<TableRow >
	    
	    <TableLayout 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:collapseColumns=""
	        >
	        <TableRow 
	            android:layout_width="match_parent"
	    		android:layout_height="wrap_content">
	    
					<TextView 
					    android:id="@+id/txtNamePet"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					    android:text="@string/txtNamePet"
					    android:textColor="#FFFFFF"
					    android:textSize="40sp"
					    />

			</TableRow>
		    
			
	        <TableRow 
	            android:layout_width="match_parent"
	    		android:layout_height="wrap_content">
			        
			        <TextView 
				    android:id="@+id/txtOwner"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/txtOwner"
				    android:textColor="#FFFFFF"
				    android:textSize="20sp"
				    />
			        
		    </TableRow>
	    </TableLayout>

	    <TableLayout
	        android:layout_height="match_parent"
	        android:gravity="right" >

	        <TableRow
	            android:layout_height="match_parent"
	            android:layout_gravity="right"
	            android:gravity="right" >

<!-- 	            <ImageView -->
<!-- 	                android:layout_gravity="right" -->
<!-- 	                android:src="@drawable/greenbackground" /> -->
	        </TableRow>
	        
		    <TableRow >
			    <TextView
			        android:text="4.8"
			        android:textColor="#FFFFFF"
			        android:textSize="20dp" />
			
			</TableRow>
			
		    <TableRow >
		        
		        <RatingBar 
		            android:id="@+id/ratingBarIndicator"
		            style="@style/CustomRatingBar"
		            />
		        
		    </TableRow>
		    
		    <TableRow>
		        
		        <TextView 
		            android:text="239"
		            android:textColor="#FFFFFF"/>
		    </TableRow>
		
	    </TableLayout>
    </TableRow>
    <TableRow >

        <ImageButton
            android:layout_width="wrap_content"
            android:scaleType="center"
            android:src="@drawable/android_share_icon" />
        
    </TableRow>
		
	</TableLayout>
	
	
    
</RelativeLayout>
